Remove unused maven plugin test configuration